[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydsb"
version = "2.3.0"
authors = [
    { name = "Moritz Jannasch", email = "contact@moritzj.de" },
]
description = "Python API for DSBmobile"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mojansch/pydsb"
"Bug Tracker" = "https://github.com/mojansch/pydsb/issues"